feat: projects section and details page + performance enhancements

--- a/src/app.css
+++ b/src/app.css
@@ -81,3 +81,7 @@
         @apply bg-background text-foreground;
     }
 }
+
+pre.shiki.tokyo-night {
+    @apply !bg-[#101017]/80 ring-2 ring-gray-800 ring-opacity-80 !backdrop-blur-md !backdrop-filter;
+}
