--- a/src/app.css
+++ b/src/app.css
@@ -85,3 +85,7 @@
 pre.shiki.tokyo-night {
     @apply !bg-[#101017]/80 ring-2 ring-gray-800 ring-opacity-80 !backdrop-blur-md !backdrop-filter;
 }
+
+html {
+    scroll-behavior: smooth;
+}
